--- a/src/pages/todos/TodosSidebar.module.css
+++ b/src/pages/todos/TodosSidebar.module.css
@@ -19,7 +19,7 @@
 }
 
 .navTodos::-webkit-scrollbar {
-  width: 1.6vw;
+  width: 16px;
 }
 
 .navTodos::-webkit-scrollbar-thumb {
